# smartpi

./: ..gitignore.swp  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  video.html  video_1s.html
c/: infer_service.cpp  jpeg_resample.c  smartpi.cpp
modules/smartpi/: entry.c  micropython.mk
root/: boot.scr.uimg  cmdline.txt  config.txt
root/ext/: init
src/: api.rs  encode.rs  inference_engine.rs  lib.rs  livestream.rs  main.rs  realtime.rs  timer.rs
src/camera/: camera_pi.rs  camera_win.rs  mod.rs
sysroot/: MvNCAPI-ma2450.mvcmd  MvNCAPI-ma2x8x.mvcmd  MvNCAPI-mv0262.mvcmd  inference_graph.xml  plugins.xml  smartpi.py  udevd
sysroot/lib/: ld-musl-aarch64.so.1
sysroot/www/: index.html
